@@ -20,6 +20,7 @@ dependencies {
     testImplementation(platform(libs.junit.bom))
     testImplementation(libs.junit)
     testImplementation(libs.junit.params)
+    testRuntimeOnly(libs.junit.platform.launcher)
     testImplementation(libs.mockito)
     testImplementation(libs.mockito.junit)
 
@@ -27,6 +28,8 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util.zip=ALL-UNNAMED")
 }
 
 jmh {
