@@ -24,9 +24,12 @@ dependencies {
     testImplementation(platform(libs.junit.bom))
     testImplementation(libs.junit)
     testImplementation(libs.junit.params)
+    testRuntimeOnly(libs.junit.platform.launcher)
     testImplementation(libs.mockito)
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util.zip=ALL-UNNAMED")
 }
