@@ -46,6 +46,8 @@ val copyExtension = tasks.register<Copy>("copyExtension") {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util.zip=ALL-UNNAMED")
 }
 
 tasks.compileJava{
